# vulkan_test

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
3rd/traits/include/: func.h  trait.h
ext/SDL/: CMakeLists.txt
ext/assimp/: CMakeLists.txt
ext/fmt/lib/Debug/: fmtd.lib
ext/fmt/lib/Release/: fmt.lib
ext/reflect-cpp/: CMakeLists.txt
ext/reflect-cpp/lib/Release/: reflectcpp.lib
ext/traits/: trait.h
ext/traits/traits/: func.h
ext/yaml-cpp/: CMakeLists.txt
ext/yaml-cpp/lib/Release/: yaml-cpp.lib
res/pipeline_layouts/: basic.yaml
res/pipelines/: basic.yaml
res/render_passes/: basic.yaml  msaa.yaml
res/shaders/: common.glsl  compile.bat
res/shaders/triangle/: triangle.frag  triangle.vert
src/: main.cpp  pch.h
src/base/: containers.h  geometry.h  logger.cpp  logger.h  macro.h  template.h  template.inl  util.cpp  util.h
src/base/enum_string/: enum_to_string.h
src/camera/: camera.cpp  camera.h
src/camera/utils/: util.h
src/render/: drawable.cpp  render_resouces.cpp  render_resouces.h
src/render/resources/: resource_types.h
src/render/resources/fork/: stb_image.cpp  stb_image.h
src/render/resources/geometry/: geometry_data.h
src/render/resources/model/: model_manager.cpp  model_manager.h
src/render/resources/pipeline/: pipeline_manager.cpp  pipeline_manager.h
src/render/resources/pipeline_layout/: pipeline_layout_manager.cpp  pipeline_layout_manager.h
src/render/resources/render_pass/: render_pass_manager.cpp  render_pass_manager.h
src/render/resources/shader/: shader_manager.cpp  shader_manager.h
src/render/resources/texture/: texture_manager.cpp  texture_manager.h
src/render/rhi/: rhi.h  structs.h
src/render/rhi/vulkan/: command_buffer.cpp  command_buffer.h  descriptor_sets.cpp  device.cpp  device.h  instance.cpp  pipeline.cpp  pipeline_resources.cpp  pipeline_resources.h  swap_chain.cpp  swap_chain.h  sync.cpp  sync.h  types.h
src/render/rhi/vulkan/benchmark/: buffer.cpp  buffer.h  image.cpp  image.h  model.cpp  model.h  resource_manager.cpp  resource_manager.h
src/render/rhi/vulkan/fork/: vk_mem_alloc.h
src/render/rhi/vulkan/trans/: enum_map.h  enum_trans.h  structure_rfl.h  structure_trans.h
src/render/rhi/vulkan/utils/: util.cpp  util.h
src/render/utils/: util.h
src/rendering/: drawable.cpp  drawable.h  render_info.h  render_resouces.cpp  render_resouces.h  render_types.h  renderer.cpp  renderer.h
src/rendering/resources/: resource.h  resource_types.h
src/rendering/resources/geometry/: geometry_data.cpp  geometry_data.h
src/rendering/resources/pipeline/: pipeline_manager.cpp  pipeline_manager.h
src/rendering/resources/pipeline_layout/: pipeline_layout_manager.cpp  pipeline_layout_manager.h
src/rendering/resources/render_pass/: render_pass_manager.cpp  render_pass_manager.h
src/rendering/resources/shader/: shader.h  shader_manager.cpp  shader_manager.h
src/rendering/resources/texture/: texture_manager.cpp  texture_manager.h
src/rendering/rhi/: drawable.cpp  drawable.h  enums.h  interface.h  rhi.h  structs.h
src/rendering/rhi/vulkan/: command_buffer.cpp  command_buffer.h  description_sets.cpp  description_sets.h  descriptor_sets.cpp  descriptor_sets.h  device.cpp  device.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipeline_resouces.h  pipeline_resources.cpp  pipeline_resources.h  swap_chain.cpp  swap_chain.h  sync.cpp  sync.h  types.h  vk.h
src/rendering/rhi/vulkan/benchmark/: buffer.cpp  buffer.h  data_structure.cpp  data_structure.h  image.cpp  image.h  resource_manager.cpp  resource_manager.h
src/rendering/rhi/vulkan/fork/: vk_mem_alloc.cpp  vk_mem_alloc.h
src/rendering/rhi/vulkan/trans/: enum_map.h  enum_rfl.h  enum_trans.h  structure_rfl.h  structure_trans.h
src/rendering/rhi/vulkan/utils/: util.cpp  util.h
src/rendering/utils/: util.h
src/system/: structure.h  system.cpp  system.h
src/window/: window.cpp  window.h
src/window/utils/: util.h
